macros/tests/ui/generics.rs
#[macros::main]
fn my_main<const N: usize, 'a, T>() {}

fn main() {}
